<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="fil_PH">
    <string name="server_client_id"></string>
    <string name="accept_delivery">Accept Delivery</string>
    <string name="accepted">Accepted</string>
    <string name="accepted_order">Accepted</string>
    <string name="accepted_order_details">Accepted Order Details</string>
    <string name="acknowledgment">Acknowledgement Photo</string>
    <string name="add">add</string>
    <string name="add_family_member">add family member</string>
    <string name="add_medication">Add Medication</string>
    <string name="age">Age</string>
    <string name="age_label">23 yrs old</string>
    <string name="app_name">reach52 Marketplace</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="birthday_image">birthday_img</string>
    <string name="cancel">Cancel</string>
    <string name="captured_image">Captured Image</string>
    <string name="checkout">Checkout</string>
    <string name="civil_status_label">Single</string>
    <string name="consumer_health">Health</string>
    <string name="currency">Php</string>
    <string name="date">Date</string>
    <string name="date_label">Nov 19, 2019 8:00 am</string>
    <string name="delivered">Delivered</string>
    <string name="delivered_details">Delivered Order Details</string>
    <string name="delivered_order">Delivered</string>
    <string name="discount_id_number_hint">Discount ID Number</string>
    <string name="discount_label">Discount</string>
    <string name="dispatched">Dispatched</string>
    <string name="dispatched_order_details">Dispatched Order Details</string>
    <string name="dispatched_orders">Dispatched</string>
    <string name="dispergo">Dispergo</string>
    <string name="dispergo_logo">Dispergo Logo</string>
    <string name="expiration_date">Nov 15, 2020</string>
    <string name="family_member">Insurance Plan Beneficiaries</string>
    <string name="fee_label">Delivery Fee</string>
    <string name="full_name">Full Name</string>
    <string name="go_back">Go Back</string>
    <string name="gold_insurance">Gold Plan</string>
    <string name="header_background">Header Background</string>
    <string name="hold_order">Hold</string>
    <string name="icon_depicting_an_event">Icon depicting an event</string>
    <string name="id">ID:</string>
    <string name="image1">image1</string>
    <string name="insurance_benefits">Insurance Plan Benefits</string>
    <string name="insurance_details">Insurance Plan Details</string>
    <string name="insurance_label">Insurance</string>
    <string name="insurance_plan">Insurance Plan</string>
    <string name="insurance_plan_details">Insurance Plan Details</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="logging_in_status">Logging in…</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="malayan">Malayan</string>
    <string name="malayan_insurance">Malayan Insurance</string>
    <string name="marital_status">Select Marital Status</string>
    <string name="marker_label">Marker</string>
    <string name="medication_label">Medication</string>
    <string name="medications">Medications</string>
    <string name="medicine_list">Medicine List</string>
    <string name="name_label">Michelle Subdivision. Manila City</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="new_medication_order">New Medication Order</string>
    <string name="no_reason">No Reason</string>
    <string name="none">None</string>
    <string name="not_delivered">Not Delivered</string>
    <string name="not_delivered_details">Not Delivered Order Details</string>
    <string name="ok">OK</string>
    <string name="on_hold_details">On Hold Order Details</string>
    <string name="on_hold_order">On Hold</string>
    <string name="order_medication">Order Medication</string>
    <string name="order_medicine">Order Medicine</string>
    <string name="order_processing">Order Processing</string>
    <string-array name="order_status">
        <item>ACCEPTED</item>
        <item>DELIVERED</item>
        <item>DISPATCHED</item>
        <item>NOT_DELIVERED</item>
        <item>PENDING</item>
        <item>PICKED_UP</item>
        <item>RECEIVED</item>
        <item>REJECTED</item>
        <item>ON HOLD</item>
    </string-array>
    <string name="orders">Orders</string>
    <string name="orders_rejected_details">Rejected Order Details</string>
    <string name="package_size_label">Pk Size</string>
    <string name="password">Password</string>
    <string name="patient_name">Patient Name</string>
    <string name="pending">Pending</string>
    <string name="pending_order">Pending</string>
    <string name="pending_order_details">Pending Order Details</string>
    <string name="personal_information">Personal Information</string>
    <string name="physician_name">Physician Name</string>
    <string name="pick_up_this_order">Pick up this Order</string>
    <string name="picked_up">Picked-up</string>
    <string name="picked_up_order_details">Picked-Up Order Details</string>
    <string name="picked_up_orders">Picked-Up</string>
    <string name="pills_icon">Pills Icon</string>
    <string name="plan">Gold Plan</string>
    <string name="prescription_number">Prescription Number</string>
    <string name="prescription_photo">Prescription Photo</string>
    <string name="price">Price</string>
    <string name="proceed">Proceed</string>
    <string name="purchase_id">#23456order</string>
    <string name="quantity">Quantity</string>
    <string name="receive_dispatch">Receive Dispatch</string>
    <string name="received">Received</string>
    <string name="received_order">Received</string>
    <string name="received_order_details">Received Order Details</string>
    <string name="recipient_name">Recipient Name</string>
    <string name="reject_delivery">Reject Delivery</string>
    <string name="reject_order">Rejected</string>
    <string name="rejected_reason">Reason</string>
    <string name="remove">Remove</string>
    <string name="remove_item_prompt">Remove Item?</string>
    <string name="resident_details">Resident Details</string>
    <string name="resident_label">Pepito Manila</string>
    <string name="residents">Residents</string>
    <string name="resume">Resume</string>
    <string name="search">search</string>
    <string name="sex">Sex:</string>
    <string name="status">Status:</string>
    <string name="status_label">Active</string>
    <string name="sub_total">Sub Total</string>
    <string name="sync_error">SYNC ERROR</string>
    <string name="sync_finished">SYNC FINISHED</string>
    <string name="sync_in_progress">SYNC IN PROGRESS</string>
    <string name="sync_offline">SYNC OFFLINE</string>
    <string name="sync_started">SYNC STARTED</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="text_acknowledgement_required">A photo of the Acknowledgement is required</string>
    <string name="text_complete_the_purchase">Complete the purchase</string>
    <string name="text_required_fields">Please don\'t leave anything blank</string>
    <string name="text_session_expired">Can\'t proceed, session has expired</string>
    <string name="total">Total</string>
    <string name="tracking_code">Tracking Code : </string>
    <string name="updating_index">UPDATING INDEX</string>
    <string name="username">Username</string>
    <string name="valid_until">Valid Until</string>
    <string name="vat_exclusive">VAT exclusive</string>
    <string name="vat_exempt_label">VAT Exempt</string>
    <string name="vat_inclusive">VAT Inclusive</string>
    <string name="view_insurance_policy">View Insurance Policy</string>
    <string name="view_products_and_services">View Products And Services</string>
    <string name="wedding_ring_img">wedding_ring</string>
    <string name="years_old">years old</string>
    <string name="agent_name">Agent Name:</string>
    <string name="date_start">Date start:</string>
    <string name="date_end">Date end:</string>
    <string name="insurance_name">Insurance name:</string>
    <string name="plan_name">Plan name:</string>
    <string name="relationship">Relationship</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="number">09128415711</string>
    <string name="email_sample">example@email.com</string>
    <string name="contact_no">Contact no.</string>
    <string name="additional_info">Additional info</string>
    <string name="sorry_your_age_is_not_qualified_for_this_insurance">Sorry, your age is not qualified for this insurance</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="residents_access_list">Access</string>
    <string name="residents_logistic_list">Logistic</string>
    <string name="gender">Gender</string>
    <string name="postal_code">Postal Code</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="country_code">+63</string>
    <string name="province">Municipality Province</string>
    <string name="marital">Marital Status</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="temp_vat_health">VAT Inclusive</string>
    <string name="your_basket">Your basket</string>
    <string name="your_order">Your Order</string>
    <string name="when_to_follow_up">When to follow-up?</string>
    <string name="follow_up_date">Follow up date</string>
    <string name="follow_up_product">What is your follow-up product/service?</string>
    <string name="sample_description">sample description</string>
    <string name="category" tools:ignore="MissingTranslation">Category</string>
    <string name="display" tools:ignore="MissingTranslation">Display</string>
    <string name="certificate_no" tools:ignore="MissingTranslation">Certificate No.</string>
    <string name="next">Next</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="weight_in_kg">Weight (in kg)</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="have_you_been_diagnosed_with_any_of_the_following_conditions">Have you been diagnosed with any of the following conditions?</string>
    <string name="answer">Answer</string>
    <string name="do_you_take_medications">Do you take medications?</string>
    <string name="are_you_currently_pregnant_or_have_any_children_under_5_years_old">Are you currently pregnant or have any children under 5 years old?</string>
    <string name="i_don_t_want_to_say">I don’t want to say</string>
    <string name="not_applicable">Not applicable</string>
    <string name="do_you_have_any_form_of_insurance">Do you have any form of insurance?</string>
    <string name="if_you_have_insurance_or_think_you_might_in_future_what_cover_do_you_have">If you have insurance, or think you might in future, what cover do you have?</string>
    <string name="do_you_have_a_bank_account">Do you have a bank account?</string>
    <string name="do_you_have_an_mwallet_or_electronic_payment_solution">Do you have an mWallet or electronic payment solution?</string>
    <string name="which_of_the_following_products_and_services_would_you_be_interested_in">Which of the following products and services would you be interested in?</string>
</resources>