<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textFollowUpDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_up_date"
                    android:textSize="16sp"
                    android:textColor="#303030"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/followUpDateText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/expiration_date"
                    android:layout_marginStart="8dp"
                    android:textColor="#303030"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/textFollowUpDate"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    android:text="@string/country_code"/>

                <TextView
                    android:id="@+id/contactText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/number"
                    android:textSize="16sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/productFollowUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/malayan"
                android:textSize="16sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxLines="1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>