<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/textColorWhite"
    android:clickable="false"
    android:focusable="false"
    tools:context=".resident.view.NewResidentHealthProfileFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/weight_in_kg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/weight_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"

                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier4"
                app:layout_constraintTop_toTopOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/height_in_cm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weight_edittext" />

            <EditText
                android:id="@+id/height_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier4"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="textView12,textView13"
                tools:layout_editor_absoluteX="395dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/have_you_been_diagnosed_with_any_of_the_following_conditions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_edittext" />

            <Button
                android:id="@+id/condition_answer_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/answer"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/do_you_take_medications"
                app:layout_constraintStart_toStartOf="@+id/condition_answer_btn"
                app:layout_constraintTop_toBottomOf="@+id/condition_answer_btn" />

            <!--    <Button-->
            <!--        android:id="@+id/meds_answer_btn"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:layout_marginTop="8dp"-->
            <!--        android:text="answer"-->
            <!--        app:layout_constraintStart_toStartOf="parent"-->
            <!--        app:layout_constraintTop_toBottomOf="@+id/textView15" />-->

            <EditText
                android:id="@+id/meds_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/are_you_currently_pregnant_or_have_any_children_under_5_years_old"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meds_edittext" />

            <RadioGroup
                android:id="@+id/pregnant_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16">

                <RadioButton
                    android:id="@+id/pregnant_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/pregnant_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

                <RadioButton
                    android:id="@+id/pregnant_dna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/i_don_t_want_to_say" />

                <RadioButton
                    android:id="@+id/pregnant_na"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_applicable" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/textColorWhite"
        android:background="@drawable/round_blue_button_selector"
        android:textAllCaps="false"
        android:text="@string/next" />

</LinearLayout>

