<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.insurance.InsuranceTakePhotoFragment"
    android:padding="12dp">

    <ImageView
        android:id="@+id/capturedImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/captured_image"
        app:layout_constraintBottom_toTopOf="@id/certificateNumberInputLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/certificateNumberInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/certificate_no"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/capturedImageView"
        app:layout_constraintBottom_toTopOf="@id/takePhotoButton">

        <EditText
            android:id="@+id/certificateNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:autofillHints="none"
            android:inputType="text"
            tools:ignore="LabelFor,TextFields" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/takePhotoButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_a_photo"
        android:layout_marginBottom="12dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/completePurchaseButton" />

    <Button
        android:id="@+id/completePurchaseButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"
        android:text="@string/text_complete_the_purchase"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>