<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/textColorWhite"
	android:clickable="true"
	android:focusable="true"
	tools:context=".resident.view.NewResidentInsuranceProfileFragment">


	<TextView
		android:id="@+id/textView10"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:text="@string/which_of_the_following_products_and_services_would_you_be_interested_in"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/service_answer_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/answer"
		app:layout_constraintStart_toStartOf="@+id/textView10"
		app:layout_constraintTop_toBottomOf="@+id/textView10" />

	<Button
		android:id="@+id/nextBtn"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:text="@string/next"
		android:textAllCaps="false"
		android:background="@drawable/round_blue_button_selector"
		android:textColor="@color/textColorWhite"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>